# khdev

./: Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  run.sh
khdev/: cli.py
notebooks/: playground_eda.ipynb  rainfall_prediction.ipynb
